--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm px-5 py-3 py-lg-0">
         <a href=" {% static 'index.html' %} " class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-paint-roller text-secondary me-3"></i>HOME SERVICE </h1>
+            <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-paint-roller text-secondary me-3"></i> ALPHA HOME SERVICE </h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -78,17 +78,17 @@
             <div class="navbar-nav ms-auto py-0 pe-4 border-end border-5 border-primary">
                 <a href=" {% static 'index.html' %} " class="nav-item nav-link active">Home</a>
                 <a href="{% url 'login_view' %}" class="nav-item nav-link">Login</a>
-                <a href=" {% static 'service.html' %} " class="nav-item nav-link">Service</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href=" {% static 'blog.html' %} " class="dropdown-item">Blog Grid</a>
-                        <a href=" {% static 'detail.html' %} " class="dropdown-item">Blog Detail</a>
-                        <a href=" {% static 'team.html' %} " class="dropdown-item">The Team</a>
-                        <a href=" {% static 'testimonial.html' %} " class="dropdown-item">Testimonial</a>
-                    </div>
-                </div>
-                <a href=" {% static 'contact.html' %} " class="nav-item nav-link">Contact</a>
+                <a href="#service" class="nav-item nav-link">Service</a>
+<!--                <div class="nav-item dropdown">-->
+<!--                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>-->
+<!--                    <div class="dropdown-menu m-0">-->
+<!--                        <a href=" {% static 'blog.html' %} " class="dropdown-item">Blog Grid</a>-->
+<!--                        <a href=" {% static 'detail.html' %} " class="dropdown-item">Blog Detail</a>-->
+<!--                        <a href=" {% static 'team.html' %} " class="dropdown-item">The Team</a>-->
+<!--                        <a href=" {% static 'testimonial.html' %} " class="dropdown-item">Testimonial</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
             <div class="d-none d-lg-flex align-items-center ps-4">
                 <i class="fa fa-2x fa-mobile-alt text-secondary me-3"></i>
@@ -107,7 +107,7 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-dark">We Bring Your Home To Lively Colors</h1>
+                    <h1 class="display-1 text-dark">We Bring Your Home </h1>
                     <p class="fs-4 text-dark mb-4"></p>
                     <div class="pt-2">
                         <a href=" {% static '' %} " class="btn btn-secondary rounded-pill py-md-3 px-md-5 mx-2">Get A Quote</a>
@@ -451,61 +451,61 @@
     
 
     <!-- Footer Start -->
-<!--    <div class="container-fluid bg-dark bg-footer text-light py-5">-->
-<!--        <div class="container py-5">-->
-<!--            <div class="row g-5">-->
-<!--                <div class="col-lg-3 col-md-6">-->
-<!--                    <h4 class="text-primary">Get In Touch</h4>-->
-<!--                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">-->
-<!--                    <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor</p>-->
-<!--                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>-->
-<!--                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>-->
-<!--                    <p class="mb-0"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>-->
-<!--                </div>-->
-<!--                <div class="col-lg-3 col-md-6">-->
-<!--                    <h4 class="text-primary">Our Services</h4>-->
-<!--                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">-->
-<!--                    <div class="d-flex flex-column justify-content-start">-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Regular Painting</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Wall Painting</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Floor Coating</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Graffiti Removal</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Mildew Removal</a>-->
-<!--                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Window Washing</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-3 col-md-6">-->
-<!--                    <h4 class="text-primary">Quick Links</h4>-->
-<!--                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">-->
-<!--                    <div class="d-flex flex-column justify-content-start">-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>-->
-<!--                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>-->
-<!--                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-3 col-md-6">-->
-<!--                    <h4 class="text-primary">Newsletter</h4>-->
-<!--                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">-->
-<!--                    <form action="">-->
-<!--                        <div class="input-group">-->
-<!--                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email">-->
-<!--                            <button class="btn btn-primary">Sign Up</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                    <h6 class="text-primary mt-4 mb-3">Follow Us</h6>-->
-<!--                    <div class="d-flex">-->
-<!--                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>-->
-<!--                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>-->
-<!--                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>-->
-<!--                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="container-fluid bg-dark bg-footer text-light py-5">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6" id="contact">
+                    <h4 class="text-primary">Get In Touch</h4>
+                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+                    <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-0"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
+                </div>
+                <div class="col-lg-3 col-md-6 " id="service">
+                    <h4 class="text-primary">Our Services</h4>
+                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+                    <div class="d-flex flex-column justify-content-start">
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Regular Painting</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Wall Painting</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Floor Coating</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Graffiti Removal</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Mildew Removal</a>
+                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Window Washing</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-primary">Quick Links</h4>
+                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+                    <div class="d-flex flex-column justify-content-start">
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
+                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
+                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-primary">Newsletter</h4>
+                    <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email">
+                            <button class="btn btn-primary">Sign Up</button>
+                        </div>
+                    </form>
+                    <h6 class="text-primary mt-4 mb-3">Follow Us</h6>
+                    <div class="d-flex">
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid bg-primary text-dark py-4">
         <div class="container">
             <div class="row g-0">
