--- a/templates/user_temp/user_home.html
+++ b/templates/user_temp/user_home.html
@@ -40,7 +40,7 @@
             class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200"
             href="#"
           >
-            HOME SERVICE
+            ALPHA
           </a>
           <ul class="mt-6">
             <li class="relative px-6 py-3">
@@ -50,7 +50,7 @@
               ></span>
               <a
                 class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-                href=" {% static 'index.html' %} "
+                href=" {% url 'user_dashboard' %} "
               >
                 <svg
                   class="w-5 h-5"
@@ -443,7 +443,7 @@
                 >
                   <img
                     class="object-cover w-8 h-8 rounded-full"
-                    src="https://images.unsplash.com/photo-1502378735452-bc7d86632805?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&s=aa3a807e1bbdfd4364d1f449eaa96d82"
+                    src="{% static 'img/avatar.png' %}"
                     alt=""
                     aria-hidden="true"
                   />
@@ -535,7 +535,14 @@
           <div class="container px-6 mx-auto grid">
             {% block content %}
             <!-- Cards -->
-
+                <div class="min-w-0 p-4 text-white bg-purple-600 rounded-lg shadow-xsb py-5">
+                <h1 class="mb-4 font-semibold">
+                  Welcome
+                </h1>
+                <p>
+                 {{request.user}}
+                </p>
+              </div>
               <!-- Card -->
 
             {% endblock %}
