--- a/templates/worker_temp/dashboard.html
+++ b/templates/worker_temp/dashboard.html
@@ -40,7 +40,7 @@
             class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200"
             href="#"
           >
-            ALPHA
+            home service
           </a>
           <ul class="mt-6">
             <li class="relative px-6 py-3">
@@ -357,7 +357,7 @@
                 >
                   <img
                     class="object-cover w-8 h-8 rounded-full"
-                    src="{% static 'img/avatar.png' %}"
+                    src="https://images.unsplash.com/photo-1502378735452-bc7d86632805?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&s=aa3a807e1bbdfd4364d1f449eaa96d82"
                     alt=""
                     aria-hidden="true"
                   />
